fix(dialogs): improve dialogs and settings for small screens

--- a/Messenger UWP/CSS/dialogs.css
+++ b/Messenger UWP/CSS/dialogs.css
@@ -1,4 +1,4 @@
-﻿/* This file is part of Messenger UWP.
+/* This file is part of Messenger UWP.
 Copyright (C) 2019 Sylvain Bruyère
 
 Messenger UWP is free software: you can redistribute it and/or modify
@@ -14,34 +14,37 @@ You should have received a copy of the GNU General Public License
 along with Messenger UWP.  If not, see <https://www.gnu.org/licenses/>. */
 
 
-/* Panel container */
-._4_j5 {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 100%;
-    height: 100%;
-    max-width: 100%;
-    max-height: 100%;
-    z-index: 1000;
+/* Dialog container */
+._3qw {
+    min-width: initial !important;
     overflow: hidden;
-    box-sizing: border-box;
-    background: rgba(0, 0, 0, 0.4);
+}
+
+/* Outer dialog */
+._3ixn {
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
 }
 
-/* Panel */
-._4_j9 {
+/* Dialog */
+._59s7 {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    width: 90% !important;
-    height: 90% !important;
-    max-width: 550px;
-    max-height: 650px;
-    background: #ffffff;
+    max-width: 90% !important;
+    max-height: 90% !important;
+    margin: 0px !important;
+    overflow: auto;
+    animation: none !important;
+}
+
+/* Remove useless dialog margin since it is now centered */
+._4eb- {
+    margin-bottom: 0px;
+}
+
+/* Fix inconsistent border-radius */
+._4eby {
     border-radius: 3px;
-    box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.2);
 }
