--- a/Messenger UWP/CSS/cards.css
+++ b/Messenger UWP/CSS/cards.css
@@ -1,4 +1,4 @@
-﻿/* This file is part of Messenger UWP.
+/* This file is part of Messenger UWP.
 Copyright (C) 2019 Sylvain Bruyère
 
 Messenger UWP is free software: you can redistribute it and/or modify
@@ -14,36 +14,39 @@ You should have received a copy of the GNU General Public License
 along with Messenger UWP.  If not, see <https://www.gnu.org/licenses/>. */
 
 
-/* Master/details container */
-._4sp8 {
-    min-width: auto;
+/* Fix cards width on chatbots */
+@media all and (max-width: 950px) {
+    ._3idt {
+        width: 450px !important;
+    }
 }
 
-/* Master view only */
-._4sp8.master ._1t2u {
-    display: none;
-}
-._4sp8.master ._1enh {
-    min-width: 100%;
-    /* max-height: 100%; TODO: Usefull on v1? */
+@media all and (max-width: 900px) {
+    ._3idt {
+        width: 400px !important;
+    }
 }
 
-/* Details view only */
-._4sp8.details ._1enh {
-    display: none;
+@media all and (max-width: 850px) {
+    ._3idt {
+        width: 350px !important;
+    }
 }
 
-/* Fix search bar width */
-._7tpc {
-    max-width: 100%;
+@media all and (max-width: 800px) {
+    ._3idt {
+        width: 300px !important;
+    }
 }
 
-/* Remove separator between Master and details view */
-._4sp8.details ._1t2u {
-    border-left: none;
+@media all and (max-width: 750px) {
+    ._3idt {
+        width: 250px !important;
+    }
 }
 
-/* Fix details view height when master view isn't displayed */
-._51l0, ._605a, ._2sdm, ._li, ._4sp8 {
-    height: 100%;
+@media all and (max-width: 400px) {
+    ._3idt {
+        width: 200px !important;
+    }
 }
