feat(master-view): add an acrylic effect for the master view background feat(loading): improve the loading screen and add a retry button refactor: improve project structure and use the MVVM pattern

--- a/Messenger UWP/CSS/cancel-media-queries.css
+++ b/Messenger UWP/CSS/cancel-media-queries.css
@@ -54,7 +54,7 @@ along with Messenger UWP.  If not, see <https://www.gnu.org/licenses/>. */
     /* Conversation items */
         /* Unread conversation */
         ._1ht3._1ht1, ._1ht1._1ht2 {
-            background-color: #ffffff;
+            background: none;
             transition: none;
         }
 
@@ -138,7 +138,7 @@ along with Messenger UWP.  If not, see <https://www.gnu.org/licenses/>. */
 
         /* Unread conversation */
         ._1ht3._1ht1._6zk9, ._1ht1._6zk9._1ht2 {
-            background-color: #ffffff;
+            background: none;
             transition: none;
         }
 
