--- a/Messenger UWP/App.xaml
+++ b/Messenger UWP/App.xaml
@@ -17,6 +17,11 @@ along with Messenger UWP.  If not, see <https://www.gnu.org/licenses/>. -->
 <Application
     x:Class="Messenger.UWP.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    RequestedTheme="Light">
+
+    <Application.Resources>
+        <Color x:Key="MessengerColor">#FF007CFF</Color>
+    </Application.Resources>
 
 </Application>
