--- a/Messenger UWP/App.xaml
+++ b/Messenger UWP/App.xaml
@@ -22,6 +22,7 @@ along with Messenger UWP.  If not, see <https://www.gnu.org/licenses/>. -->
 
     <Application.Resources>
         <Color x:Key="MessengerColor">#FF007CFF</Color>
+        <SolidColorBrush x:Key="MessengerBrush" Color="{StaticResource MessengerColor}" />
     </Application.Resources>
 
 </Application>
