--- a/Messenger UWP/Views/MainPage.xaml
+++ b/Messenger UWP/Views/MainPage.xaml
@@ -15,7 +15,7 @@ along with Messenger UWP.  If not, see <https://www.gnu.org/licenses/>. -->
 
 
 <Page
-    x:Class="Messenger.UWP.MainPage"
+    x:Class="Messenger.UWP.Views.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -41,7 +41,7 @@ along with Messenger UWP.  If not, see <https://www.gnu.org/licenses/>. -->
 
             <!-- The WebView is created in code behind and added here. -->
 
-            <ProgressRing Grid.Row="1" IsActive="{x:Bind ViewModel.IsLoading, Mode=OneWay}" Width="50" Height="50" Margin="0,40" Foreground="{StaticResource MessengerColor}" />
+            <ProgressRing Grid.Row="1" IsActive="{x:Bind ViewModel.IsLoading, Mode=OneWay}" Width="50" Height="50" Margin="0,40" Foreground="{StaticResource MessengerBrush}" />
 
             <StackPanel Grid.Row="1" Margin="16" VerticalAlignment="Center"
                     Visibility="{x:Bind ViewModel.HasFailed, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
